fixing services alignment

--- a/src/Components/Layout/Content/About/Services/Services.css
+++ b/src/Components/Layout/Content/About/Services/Services.css
@@ -1,3 +1,4 @@
 .services-services {
   margin-top: 52px;
+  margin-right: 10px;
 }
